--- a/src/Components/InfoPage/InfoPage.css
+++ b/src/Components/InfoPage/InfoPage.css
@@ -1,7 +1,3 @@
-* {
-  font-family: "DrukTextWideTT", Arial, sans-serif;
-}
-
 body {
   box-sizing: border-box;
   margin: 0;
@@ -45,7 +41,9 @@ body {
 .btn-infoPage-1 {
   color: white;
   display: flex;
+  justify-content: space-between;
   font-size: 18px;
+  align-items: center;
   line-height: 1.5;
 }
 
