--- a/src/Components/Admin/AddProduct/AddProduct.css
+++ b/src/Components/Admin/AddProduct/AddProduct.css
@@ -2,15 +2,17 @@
   /* font-family: "Roboto", "Helvetica", "Arial", sans-serif; */
 }
 
-body {
+.body-add {
   background-color: #0d1430;
+  height: 100vh;
 }
 
 #div-add {
   width: 25%;
   display: flex;
   flex-direction: column;
-  margin: 20px auto;
+  margin: 0px auto;
+  padding-top: 10%;
 }
 
 .inp-addProduct {
@@ -47,4 +49,9 @@ body {
 .btn-add:hover {
   transition: color 0.2s;
   color: white;
+}
+
+.noAdmin {
+  margin-top: 120px;
+  margin-bottom: 130px;
 }
