--- a/src/Components/Products/ProductCard/ProductCard.css
+++ b/src/Components/Products/ProductCard/ProductCard.css
@@ -1,223 +1,92 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,500,700);
-
-@import url(https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic);
-
-* {
-  box-sizing: border-box;
-
-  margin: 0;
-
-  padding: 0;
+body {
+  color: gray;
+  font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  letter-spacing: 0;
 }
 
-.blog-card {
-  width: 350px;
+/* img { */
+/* height: auto; */
+/* max-width: 100%; */
+/* vertical-align: middle; */
+/* } */
 
-  height: 500px;
-
-  position: relative;
-
-  overflow: hidden;
-
-  border-radius: 10px;
-
-  box-shadow: 3px 3px 20px rgba(0, 0, 0, 0.5);
+.btn {
+  background-color: white;
+  border: 1px solid lightgrey;
+  border-radius: 1rem;
+  color: darkgrey;
+  padding: 0.5rem;
+  text-transform: lowercase;
 }
 
-.blog-card .color-overlay {
-  /* Rectangle 11: */
+.btn--block {
+  display: block;
+  width: 100%;
+}
 
-  background: rgba(0, 0, 0, 0.7);
-
-  width: 350px;
-
-  height: 500px;
-
-  z-index: 10;
-
-  transition: background 0.3s cubic-bezier(0.33, 0.66, 0.66, 1);
-
-  text-align: center;
-
+.cards {
   display: flex;
-
-  flex-direction: column;
-}
-
-.blog-card .gradient-overlay {
-  /* bg-gradient: */
-
-  background-image: -webkit-linear-gradient(
-    rgba(0, 0, 0, 0) 0%,
-
-    rgba(0, 0, 0, 0.6) 21%
-  );
-
-  background-image: -moz-linear-gradient(
-    rgba(0, 0, 0, 0) 0%,
-
-    rgba(0, 0, 0, 0.6) 21%
-  );
-
-  background-image: -o-linear-gradient(
-    rgba(0, 0, 0, 0) 0%,
-
-    rgba(0, 0, 0, 0.6) 21%
-  );
-
-  background-image: linear-gradient(
-    rgba(0, 0, 0, 0) 0%,
-
-    rgba(0, 0, 0, 0.6) 21%
-  );
-
-  width: 350px;
-
-  height: 500px;
-
-  position: absolute;
-
-  top: 350px;
-
-  left: 0;
-
-  z-index: 15;
-}
-
-.blog-card:hover .card-info {
-  opacity: 1;
-
-  bottom: 120px;
-}
-
-.blog-card:hover .color-overlay {
-  background: rgba(84, 104, 110, 0.8);
-}
-
-.title-content {
-  text-align: center;
-
-  margin: 50px 0 0 0;
-
-  position: absolute;
-
-  z-index: 20;
-
-  width: 100%;
-
-  top: 0;
-
-  left: 0;
-}
-
-h3 {
-  font-size: 20px;
-
-  font-weight: 500;
-
-  letter-spacing: 2px;
-
-  /* color: #9cc9e3; */
-
-  font-family: "Roboto", sans-serif;
-
-  margin-bottom: 0;
-}
-
-hr {
-  width: 50px;
-
-  height: 3px;
-
-  margin: 20px auto;
-
-  border: 0;
-
-  background: #d0bb57;
-}
-
-.intro {
-  width: 170px;
-
-  margin: 0 auto;
-
-  color: #dce3e7;
-
-  font-family: "Droid Serif", serif;
-
-  font-size: 13px;
-
-  font-style: italic;
-
-  line-height: 18px;
-}
-
-.card-info {
-  text-align: center;
-
-  width: 100%;
-
-  position: absolute;
-
-  bottom: 100px;
-
-  left: 0;
-
-  margin: 0 auto;
-
-  padding: 0 50px;
-
-  color: #dce3e7;
-
-  font-family: "Droid Serif", serif;
-
-  font-style: 16px;
-
-  line-height: 24px;
-
-  z-index: 20;
-
-  opacity: 0;
-
-  transition: bottom 0.3s, opacity 0.3s cubic-bezier(0.33, 0.66, 0.66, 1);
-
-  height: 180px;
-
-  overflow-y: scroll;
-}
-
-.utility-info {
-  position: absolute;
-
-  bottom: 0px;
-
-  left: 0;
-
-  width: 100%;
-
-  text-align: center;
-
-  z-index: 20;
-}
-
-.utility-list {
-  list-style-type: none;
-
-  margin: 0 0 30px;
-
+  flex-wrap: wrap;
+  list-style: none;
+  margin: 0;
   padding: 0;
-
-  width: 100%;
 }
 
-.utility-list li {
-  margin: 0 15px 0 0;
+.cards__item {
+  display: flex;
+  padding: 1rem;
+}
 
-  padding: 0 0 0 22px;
+.card {
+  background-color: white;
+  border-radius: 0.25rem;
+  box-shadow: 0 20px 40px -14px rgba(0, 0, 0, 0.25);
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  width: 350px;
+}
 
-  display: inline-block;
+.card__content {
+  display: flex;
+  flex: 1 1 auto;
+  flex-direction: column;
+  padding: 1rem;
+}
 
-  color: #dce3e7;
+.card__image {
+  width: 100%;
+  height: 250px;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-top-left-radius: 0.25rem;
+  border-top-right-radius: 0.25rem;
+  filter: contrast(70%);
+  /* filter: saturate(180%); */
+  transition: 0.5s;
+  overflow: hidden;
+  position: relative;
+}
+.card__image:hover {
+  filter: contrast(101%);
+  /* filter: saturate(180%); */
+  /* transition: 1s; */
+}
 
-  font-family: "Roboto", sans-serif;
+.card__title {
+  color: grey;
+  font-size: 1.25rem;
+  font-weight: 300;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+}
+
+.card__text {
+  flex: 1 1 auto;
+  font-size: 0.875rem;
+  line-height: 1.5;
+  margin-bottom: 1.25rem;
 }
