--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -12,9 +12,9 @@ a {
 }
 
 .content-navbar {
-  position: fixed;
+  /* position: fixed; */
   padding-left: 40px;
-  width: 100%;
+  width: 98%;
   display: flex;
   align-items: center;
   background-color: rgba(13, 20, 48, 0.9);
