--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -33,3 +33,10 @@ a {
   outline: none;
   height: 40px;
 }
+
+.panelLogin {
+  display: flex;
+  align-items: center;
+  justify-content: end;
+  width: 60%;
+}
